# telegram-bot

./: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  PHASE2_COMPLETION.md  PHASE3_CHANGES.md  PHASE3_COMPLETION.md  PHASE4_SUMMARY.md  QUICK_START_TRIVIA.md  README.md  TRIVIA_ARCHITECTURE.md  TRIVIA_FEATURE.md  UPTIMEROBOT_SETUP.md  main.py  pyproject.toml  render.yaml  requirements.txt  test_groq.py  test_groq_nossl.py  test_trivia.py
docs/: DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  INLINE_KEYBOARD_FEATURE.md  KEEP_AWAKE_GUIDE.md  OPENTDB_INTEGRATION.md  PHASE1_COMPLETION.md  PHASE4_COMPLETION.md  PROJECT_COMPLETE.md  PROJECT_STATUS.md  QUICKSTART_PHASE3.md  SETUP_GUIDE.md  TESTING_PHASE3.md  TESTING_TRIVIA_OPENTDB.md  TRIVIA_OPENTDB_REVAMP.md
plans/: trivia-opentdb-integration.md
prompts/: 001-telegram-translation-bot.md
prompts/completed/: 001-bot-skeleton-commands.md  002-text-translation-integration.md  002-trivia-game-feature.md  003-voice-message-support.md  004-production-deployment.md  005-trivia-improvements.md
