[project]
name = "telegram-translation-bot"
version = "0.4.0"
description = "A Telegram bot for translation with Groq API - Production ready with health checks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=20.0",
    "python-dotenv>=1.0.0",
    "groq>=0.4.0",
    "aiohttp>=3.9.0",
]
